Bug 475137 - Android, Transform tool: anchor points don't respond to touch-taps like it does on desktop
Summary: Android, Transform tool: anchor points don't respond to touch-taps like it do...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 5.2.2
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-02 17:27 UTC by AppTest
Modified: 2025-08-30 20:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AppTest 2023-10-02 17:27:04 UTC
SUMMARY

I'm not sure whether this counts as a bug or feature request since I'm not sure whether this was intentional or not, but the transform tool is very hard to use when it comes to touch interactions (in other words, using your finger on the tablet screen).

When using Free, Perspective, or Warp on your layer's contents, if you try to drag the points with your finger, you likely won't get the intended effect. For example, dragging a specific anchor point in Warp, or making your selection thinner in Free. If I try to make it thinner in Free with touch, the tool will attempt to rotate instead. BUT if I do the same thing with the Samsung S-Pen, it works perfectly.

Or if I try to drag a specific anchor point, it won't drag the point I put my finger on. Again, it works perfectly with S-Pen. I doubt it's even a matter of whether my finger touched the point accurately, because even if I use Android's magnifier tool to zoom in real close on the screen and touch the point perfectly, the finger touch still doesn't result in the intended effect.

SOMETIMES I get the intended effect with touch interactions, but it's more misses than successes that I can't trust to get consistent results.

In short, make touch interactions work just as well as if I was using the Samsung S-Pen, and I'm a happy person.


SOFTWARE/OS VERSIONS
Android 13
Both Krita 5.1.5 and 5.2 RC1

ADDITIONAL INFORMATION
Comment 1 AppTest 2024-04-09 04:26:42 UTC
Okay, actually, yeah, this one's a bug, because I just realized how anchor points work in the Windows version. In Windows, you tap an anchor point (it becomes highlighted), you lift your finger, and THEN you drag the anchor point.

On Android, the anchor point never becomes highlighted upon tapping it, making points frustratingly difficult to move via finger. This needs fixing to respond like it does on desktop.
Comment 2 AppTest 2024-04-13 06:26:55 UTC
A temporary workaround for Android users without other physical accessories who wish to accurately activate anchor points is to use the Android apps Shizuku and Real Mouse.

https://play.google.com/store/apps/details?id=moe.shizuku.privileged.api
https://play.google.com/store/apps/details?id=com.redlee90.realmouse

This will simulate a real mouse on your Android screen which you can use to click on the anchor points in Krita, after which you can drag with the finger.
Comment 3 Bug Janitor Service 2025-08-28 18:59:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2455
Comment 4 Dmitry Kazakov 2025-08-29 07:40:11 UTC
Git commit 311e56277b628ebc9926c004a2436367427f398b by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 29/08/2025 at 07:39.
Pushed by dkazakov into branch 'master'.

Make transform tool work with touch drawing

The transform tool strategies rely on receiving mouse move events before
mouse presses to tell which anchor they are supposed to manipulate. When
touch drawing, that doesn't happen obviously, there they always get a
press first, which makes the tool basically unusable with touch. This
commit generates an artificial hover when receiving a touch press,
fixing the problem.

M  +5    -0    libs/flake/KoPointerEvent.cpp
M  +5    -0    libs/flake/KoPointerEvent.h
M  +8    -0    plugins/tools/tool_transform2/kis_tool_transform.cc

https://invent.kde.org/graphics/krita/-/commit/311e56277b628ebc9926c004a2436367427f398b
Comment 5 Dmitry Kazakov 2025-08-30 20:46:39 UTC
Git commit 61001e3281252522cbc4bc93480438ccb45d4394 by Dmitry Kazakov.
Committed on 30/08/2025 at 20:46.
Pushed by dkazakov into branch 'krita/5.2'.

Make transform tool work with touch drawing

The transform tool strategies rely on receiving mouse move events before
mouse presses to tell which anchor they are supposed to manipulate. When
touch drawing, that doesn't happen obviously, there they always get a
press first, which makes the tool basically unusable with touch. This
commit generates an artificial hover when receiving a touch press,
fixing the problem.


(cherry picked from commit 311e56277b628ebc9926c004a2436367427f398b)

Co-authored-by: Carsten Hartenfels <carsten.hartenfels@pm.me>

M  +5    -0    libs/flake/KoPointerEvent.cpp
M  +5    -0    libs/flake/KoPointerEvent.h
M  +8    -0    plugins/tools/tool_transform2/kis_tool_transform.cc

https://invent.kde.org/graphics/krita/-/commit/61001e3281252522cbc4bc93480438ccb45d4394