Make transform tool work with touch drawing

The transform tool strategies rely on receiving mouse move events before
mouse presses to tell which anchor they are supposed to manipulate. When
touch drawing, that doesn't happen obviously, there they always get a
press first, which makes the tool basically unusable with touch. This
commit generates an artificial hover when receiving a touch press,
fixing the problem.

BUG:475137